opam-version: "2.0"
maintainer: "Louis Roché <louis@louisroche.net>"
authors: "Louis Roché <louis@louisroche.net>"
homepage: "https://github.com/Khady/diffwhat"
bug-reports: "https://github.com/Khady/diffwhat/issues"
license: "AGPL-3.0-or-later"
dev-repo: "git+https://github.com/Khady/diffwhat.git"
doc: "https://khady.github.io/diffwhat/"
tags: ["git" "diff"]
depends: [
  "atdgen"
  "dune" {>= "2.5"}
  "extlib"
  "merlin"
  "ocp-index"
  "tyre"
  "ocamlformat" {= "0.14.1" & dev}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "-p" name "-j" jobs] {with-doc}
]
name: "diffwhat"
synopsis: "Find places affected by changes in a diff"
description: "Some util to scan a diff and point all the places that are affected by the changes."
